It's the templated test that needs the module